force-app/main/default/objects/Account/fields/Demo_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Demo_Picklist__c</fullName>
    <label>Ottobock Coffee Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milk</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>Pickles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>