force-app/main/default/objects/Account/fields/Dependency_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependency Checkbox</label>
    <type>Checkbox</type>
</CustomField>