force-app/main/default/objects/Account/fields/Dependency_Field__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependency Field</label>
    <type>Checkbox</type>
</CustomField>