force-app/main/default/objects/Account/fields/Rich_text_area_field_number_one__c.field-meta.xml
<CustomField>
    <fullName>Rich_text_area_field_number_one__c</fullName>
    <label>Rich text area 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>