force-app/main/default/objects/Account/fields/Test_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_1__c</fullName>
    <label>Test Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>